# duckdb-pgwire

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: ExtensionTemplate.yml  MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: duckdb_pgwire_extension.cpp
src/include/: duckdb_pgwire_extension.hpp
test/sql/: duckdb_pgwire.test
